--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,7 +11,7 @@ body{
 header{
     min-width: 100%;
     min-height: 63px;
-    background: #F89128 ;
+    background: #F68C1D ;
 
     display: flex;
     justify-content: space-between;
@@ -73,6 +73,31 @@ header{
                 background: #5A5858;
                 cursor: pointer;
             }
+        }
+    }
+
+    @media(max-width: 1290px){
+        button{
+            font-size: 0.8em;
+            width: 140px;
+        }
+    }
+
+    @media (max-width: 1100px){
+        button{
+            display: none;  
+        }
+    }
+
+    @media (max-width: 815px){
+        div.logo{
+           img{
+               float: left;
+               margin-left: 4px;
+           }
+        }
+        div.menu{
+            display: none;
         }
     }
 
@@ -222,6 +247,14 @@ main{
 
 
     }
+
+    @media(max-width: 700px){
+        div.info2{
+            img{
+                width: 70%;
+            }
+        }
+    }
 }
 
 main.segundaParte{
@@ -283,6 +316,27 @@ main.segundaParte{
                 }
            }
        }
+
+    }
+
+    @media (max-width: 1150px){
+        div.slider{
+            flex-direction: column;
+            
+            img{
+                width: 60%;
+                height: 250px;
+               align-self: center;
+               margin: auto;
+               margin-top: 30px;
+             
+            }
+
+            div.infoSlider{
+               align-self: center;
+               margin-bottom: 30px;
+            }
+        }
     }
 
     /////////
@@ -338,6 +392,13 @@ main.segundaParte{
                     transition: all 0.4s;
                 }
            }
+
+
+        @media (max-width: 920px){
+            div.caracteristicas{
+                flex-direction: column;
+            }
+        }
     }
 
       div.info4{
@@ -407,6 +468,12 @@ main.segundaParte{
             }
         
         }
+
+         @media (max-width: 1020px){
+            div.examples{
+                flex-direction: column;
+            }
+        }
       }
 
     div.info5{
@@ -460,6 +527,12 @@ main.segundaParte{
             margin-left: 14px;
             margin-bottom: 10px;
         }
+
+        @media (max-width: 700px){
+            img{
+                width: 50%;
+            }
+        }
     }
 }
 
@@ -471,8 +544,13 @@ footer{
     display: flex;
     flex-direction: row;
 
+    @media (max-width: 1150px){
+      flex-direction: column;
+
+    }
+
     div.enlaces{
-        width: 80%;
+        //width: 80%;
         display: flex;
         flex-direction: row;
        margin-top: 20px;
@@ -492,6 +570,10 @@ footer{
                color: white;
                font-weight: bold;
                font-size: 1.4em;
+               
+               &:hover{
+                   opacity: 0.7;
+               }
            }   
        }
 
@@ -499,7 +581,118 @@ footer{
            .primeroF{
                margin-bottom: 28px;
                    font-size: 2.1em;
+
+                   &:hover{
+                       cursor: default;
+                       opacity: 1;
+                   }
            }
        }
+
+       
+    
+    }
+
+
+    div.redesInfo{
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+        margin-left: 55px;
+        //height: 80px;
+       // width: 700px;
+       // border-bottom: 1px solid white;
+
+        div.redes{
+            display: flex;
+            justify-content: space-between;
+            margin-top: 20px;
+            border-bottom: 1px solid white;
+            width: 80%;
+            div.icoRedes{
+                display: flex;
+                color: white;
+                margin-right: 25px;
+
+            margin-bottom: 50px;
+                i{
+                    margin-right: 15px;
+                    font-size: 1.5em;
+                    padding-right: 20px;
+
+                    &:nth-child(1):hover{
+                        color: #0D779A ;
+                        cursor: pointer;
+                    }
+                    &:nth-child(2):hover{
+                        cursor: pointer;
+                        color: #0DA9DC;
+                    }
+
+                    &:nth-child(3):hover{
+                        cursor: pointer;
+                        color: #D64119  ;
+                    }
+
+                    &:nth-child(4):hover{
+                        cursor: pointer;
+                        color: #0B71B8;
+                    }
+                }
+            }
+
+            span{
+                font-size: 1.7em;
+                color: white;
+                margin-right: 150px;
+                display: flex;
+                i{
+                    padding-right: 10px;
+                }
+                &:hover{
+                    opacity: 0.7;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        div.app{
+            margin-top: 30px;
+            display: flex;
+            flex-direction: row; 
+            justify-content: center;
+            margin-right: 80px;
+           
+            border-bottom: 1px solid white;
+            width: 80%;
+            img{
+                width: 150px;
+                height: 60px;
+                margin-right: 20px;
+             margin-bottom: 30px;
+            }
+        }
+
+        div.contacto{
+            display: flex;
+            flex-direction: column;
+            color: white;
+
+            font-weight: bold;
+           
+           .tel{
+               font-size: 1.4em;
+           }
+        }
+    }
+
+    @media (max-width: 1100px)
+    {
+        div.app{
+            img{
+                width: 100px;
+                height: 35;
+            }
+        }
     }
 }
